--- a/PowerControl.vcxproj
+++ b/PowerControl.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="IFixPDBOperation.h" />
     <ClInclude Include="LimitSingleInstance.h" />
     <ClInclude Include="LoadConfig.h" />
+    <ClInclude Include="PollHmiEvent.h" />
     <ClInclude Include="PscadaItem.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -100,6 +101,7 @@
     <ClCompile Include="DbOperation.cpp" />
     <ClCompile Include="IFixPDBOperation.cpp" />
     <ClCompile Include="LoadConfig.cpp" />
+    <ClCompile Include="PollHmiEvent.cpp" />
     <ClCompile Include="PowerControl.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
